Fix font size on mobile

--- a/static/Styles/styles.css
+++ b/static/Styles/styles.css
@@ -49,7 +49,7 @@ p {
 
 @media screen and (max-width: 600px) {
 	body {
-		font-size: 115%;
+		font-size: 100%;
 	}
 }
 
